// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render coverage 1`] = `
<div
  className="project-card-measure"
  data-key="coverage"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        metricKey="coverage"
        metricType="PERCENT"
      />
    </div>
    <div
      className="project-card-measure-label"
    >
      metric.coverage.name
    </div>
  </div>
</div>
`;

exports[`should not render duplications 1`] = `
<div
  className="project-card-measure"
  data-key="duplicated_lines_density"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        metricKey="duplicated_lines_density"
        metricType="PERCENT"
      />
    </div>
    <div
      className="project-card-measure-label"
    >
      metric.duplicated_lines_density.short_name
    </div>
  </div>
</div>
`;

exports[`should render correctly with all data 1`] = `
<div
  className="project-card-measures"
>
  <div
    className="project-card-measure"
    data-key="reliability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="bugs"
          metricType="SHORT_INT"
          value="17"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <BugIcon
          className="little-spacer-right vertical-bottom"
        />
        metric.bugs.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="security_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="vulnerabilities"
          metricType="SHORT_INT"
          value="0"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <VulnerabilityIcon
          className="little-spacer-right vertical-bottom"
        />
        metric.vulnerabilities.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="sqale_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          className="spacer-right"
          metricKey="code_smells"
          metricType="SHORT_INT"
          value="132"
        />
        <Rating
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label-with-icon"
      >
        <CodeSmellIcon
          className="little-spacer-right vertical-bottom"
        />
        metric.code_smells.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="coverage"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <span
          className="spacer-right"
        >
          <CoverageRating
            value="88.3"
          />
        </span>
        <Measure
          metricKey="coverage"
          metricType="PERCENT"
          value="88.3"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.coverage.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <span
          className="spacer-right"
        >
          <DuplicationsRating
            value={9.8}
          />
        </span>
        <Measure
          metricKey="duplicated_lines_density"
          metricType="PERCENT"
          value="9.8"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure project-card-ncloc"
    data-key="ncloc"
  >
    <div
      className="project-card-measure-inner pull-right"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="ncloc"
          metricType="SHORT_INT"
          value="2053"
        />
        <span
          className="spacer-left"
        >
          <SizeRating
            value={2053}
          />
        </span>
      </div>
      <div
        className="project-card-measure-label"
      >
        <Connect(ProjectCardLanguages)
          className="project-card-languages"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render empty 1`] = `
<div
  className="note"
>
  overview.project.empty
</div>
`;

exports[`should render ncloc correctly 1`] = `
<div
  className="project-card-measure project-card-ncloc"
  data-key="ncloc"
>
  <div
    className="project-card-measure-inner pull-right"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        metricKey="ncloc"
        metricType="SHORT_INT"
        value="16549887"
      />
      <span
        className="spacer-left"
      >
        <SizeRating
          value={16549887}
        />
      </span>
    </div>
    <div
      className="project-card-measure-label"
    >
      <Connect(ProjectCardLanguages)
        className="project-card-languages"
      />
    </div>
  </div>
</div>
`;
